--- a/index.html
+++ b/index.html
@@ -10,220 +10,13 @@
   <meta name="apple-mobile-web-app-title" content="STV" />
 
   <!-- Manifest -->
-  <link rel="manifest" href="manifest.json" />
-  <title>Salem TV</title>
+<link rel="manifest" href="manifest.json" />
+<title>Salem TV</title>
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 <link rel="icon" type="image/png" href="https://iili.io/FbnBO4j.png">
-  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 <meta name="theme-color" content="#6a5acd" />
-  <style>
-    :root {
-      --color-bg: #0e0c1a;
-      --color-primary: slateblue;
-      --color-secondary: #1e1e2f;
-      --color-accent: #e50914;
-      --color-text: #ffffff;
-      --color-muted: #9aa3b5;
-      --color-button: #2a2a40;/**#292943;**/
-      --color-button-hover: #3a3a5c;
-    }
-
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      text-decoration: none;
-    }
-
-
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      background-color: var(--color-bg);
-      color: var(--color-text);
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
-
-    header {
-      background-color: var(--color-primary);
-      padding: 1rem 2rem;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    header img {
-      height: 40px;
-    }
-	 header span {
-	 }
-
-    main {
-      flex: 1;
-      padding: 1rem;
-      display: flex;
-      margin: 0 auto;
-      flex-direction: column;
-      gap: 1rem;
-      width: 100%;
-      max-width: 800px;
-    }
-
-    .iframe-container {
-      position: relative;
-      width: 100%;
-      padding-top: 56.25%;
-      background-color: black;
-      border-radius: 12px;
-      overflow: hidden;
-    }
-
-    iframe {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
-
-    .loader {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: rgba(0, 0, 0, 0.4);
-      z-index: 1;
-    }
-
-    .loader span {
-      width: 30px;
-      height: 30px;
-      border: 4px solid var(--color-primary);
-      border-top: 4px solid transparent;
-      border-radius: 50%;
-      animation: spin 1s linear infinite;
-    }
-
-    @keyframes spin {
-      to { transform: rotate(360deg); }
-    }
-
-    .controls {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-    }
-
-    .selector-line {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      background-color: var(--color-secondary);
-      padding: 0.6rem 1rem;
-      border-radius: 10px;
-      gap: 0.8rem;
-      flex-wrap: wrap;
-    }
-
-    .selector {
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-      flex-shrink: 0;
-    }
-
-    select {
-      background-color: var(--color-button);
-      color: white;
-      border: none;
-      padding: 0.4rem 0.8rem;
-      border-radius: 6px;
-      font-size: 1rem;
-    }
-    .botonxtra {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      }
-    .live-badge {
-      background-color: var(--color-accent);
-      color: white;
-      padding: 4px 10px;
-      border-radius: 12px;
-      font-size: 0.8rem;
-      font-weight: 500;
-      flex-shrink: 0;
-      display: none;
-    }
-
-    .live-badge.visible {
-      display: inline-block;
-    }
-.dot {
-  color: rgba(255,255,255,.9);
-  animation: blink 1s infinite;
-}
-
-@keyframes blink {
-  0%, 100% { opacity: 1; }
-  50% { opacity: 0; }
-}
-
-    .btn-icon {
-      background-color: var(--color-button);
-      color: white;
-      padding: 0.4rem;
-      border: none;
-      border-radius: 50%;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      transition: background 0.3s;
-      flex-shrink: 0;
-    }
-
-    .btn-icon:hover {
-      background-color: var(--color-button-hover);
-    }
-
-    .btn-icon .material-symbols-outlined {
-      font-size: 1.35rem;
-    }
-
-    footer {
-      background-color: var(--color-bg);
-      padding: 2rem;
-      text-align: center;
-      font-size: 0.7rem;
-      color: var(--color-button);
-    }
-.anuncio {
-background: rgba(32, 178, 170,.5);
-border: 1px solid lightseagreen;
-color: lightseagreen;
-padding: 10px;
-border-radius: 8px;
-text-align: center;
-font-size: 0.9rem;
-display: flex;
-align-items: center;
-justify-content: center;
-}
-.anuncio a {
-color: var(--color-text);
-}
-.anuncio img.profile {
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-right: 3px;
-    margin-left: 5px;
-  }
-  </style>
+<link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
@@ -278,6 +71,8 @@ color: var(--color-text);
   <footer>
     &copy; 2025 STV. Todos los derechos reservados.
   </footer>
-
+<script src="channels.js"></script>
+<script src="socials.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
