--- a/index.html
+++ b/index.html
@@ -65,7 +65,14 @@
       </div>
     </div>
     
-<div class="anuncio"><p>Powered by</p><img class="profile" src="https://th.bing.com/th/id/OIG2.Ls14.mrVPhRAUIQyj_Y8?dpr=3&pid=ImgDetMain" alt="Sam"><a href="javascript:openInstagram()">@yefrysammir</a></div>
+<div style="display:flex;justify-content:center;padding:10px">
+    <div class="anuncio">
+      <img class="profile" src="https://th.bing.com/th/id/OIG2.Ls14.mrVPhRAUIQyj_Y8?dpr=1&pid=ImgDetMain" alt="Sam">
+      <a href="https://instagram.com/yefrysammir" target="_blank" style="color:inherit">@yefrysammir</a>
+      <span style="margin-left:10px;color:var(--color-muted)">&nbsp;|&nbsp;Powered by STV</span>
+    </div>
+  </div>
+
   </main>
 
   <footer>
