--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <div style="display:flex;justify-content:center;padding:10px">
     <div class="anuncio">
       <img class="profile" src="https://th.bing.com/th/id/OIG2.Ls14.mrVPhRAUIQyj_Y8?dpr=1&pid=ImgDetMain" alt="Sam">
-      <a href="https://instagram.com/yefrysammir" target="_blank" style="color:inherit">@yefrysammir</a>
+      <a href="https://instagram.com/yefrysammir" target="_blank" style="color:inherit">YE1ZT</a>
       <span style="margin-left:10px;color:var(--color-muted)">&nbsp;|&nbsp;&nbsp;Powered by STV</span>
     </div>
   </div>
