Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 <link rel="icon" type="image/png" href="https://iili.io/FbnBO4j.png">
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-<meta name="theme-color" content="#6a5acd" />
+<meta name="theme-color" content="#0e0c1a" />
 <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
