--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="anuncio">
       <img class="profile" src="https://th.bing.com/th/id/OIG2.Ls14.mrVPhRAUIQyj_Y8?dpr=1&pid=ImgDetMain" alt="Sam">
       <a href="" target="_blank" style="color:inherit">Sam</a>
-      <span style="margin-left:10px;color:var(--color-muted)">&nbsp;|&nbsp;&nbsp;&nbsp;Powered by STV</span>
+      <span style="margin-left:10px;">&nbsp;|&nbsp;&nbsp;&nbsp;Powered by STV</span>
     </div>
   </div>
   </footer>
