Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="icon" type="image/png" href="https://iili.io/FbnBO4j.png">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-  <meta name="theme-color" content="#0e0c1a" />
+  <meta name="theme-color" content="#000" />
 <link rel="stylesheet" href="style.css" />
 <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 <script src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js?loadCastFramework=1"></script>
