Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <div class="center">
       <img src="https://iili.io/FPk2m9n.png" alt="Logo" />
       <div class="title">2.0</div>
+      <span id="liveBadge" class="live-badge"><span class="dot">●</span> LIVE</span>
     </div>
   </header>
 
