Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <header>
     <div class="center">
       <img src="https://iili.io/FPk2m9n.png" alt="Logo" />
-      <div class="title">2.0</div>
+      <div class="title">TV</div>
     </div>
   </header>
 
