Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 
   <!-- sticky tabs: EnVi first (default), Imágenes second -->
   <div class="tabs" id="tabs">
+    <div class="center">
+      <img src="https://iili.io/FPk2m9n.png" alt="Logo" />
+      <div class="title">TV</div>
+    </div>
     <div class="tabs-inner">
       <div class="tab active" data-tab="envi">Sports</div>
 <div class="tab" data-tab="envi2">Others</div>
