Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <!-- App iOS -->
   <link rel="apple-touch-icon" href="https://iili.io/FbndiJt.png" />
-  <meta name="apple-mobile-web-app-title" content="Salem TV" />
-  <meta name="apple-mobile-web-app-orientation" content="landscape">
+  <meta name="apple-mobile-web-app-title" content="STV" />
   <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-orientation" content="landscape">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-
   <!-- Manifest -->
   <link rel="manifest" href="manifest.json" />
   <title>STV</title>
