Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <link rel="stylesheet" href="style.css" />
 <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 <script src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js?loadCastFramework=1"></script>
-<script src="landscape.js"></script>
+<script src="landscape.jsx"></script>
 </head>
 <body>
   <!-- sticky tabs: EnVi first (default), Imágenes second -->
